--- a/package.json
+++ b/package.json
@@ -91,6 +91,7 @@
     "lint-staged": "^16.1.6",
     "postcss": "^8.5.3",
     "prettier": "^3.6.2",
+    "prettier-plugin-tailwindcss": "^0.7.2",
     "rimraf": "^6.0.1",
     "tailwindcss": "^4.1.4",
     "tsx": "^4.20.6",
